# raytracing

./: .gitignore  Cargo.toml  README.md
src/: canvas.rs  data.rs  draw.rs  geom.rs  main.rs  ppm.rs  tracer.rs
