[package]
name = "raytracing"
version = "0.1.0"
authors = ["Ryan Zeigler <zeiglerr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
clap = "2.33.1"
png = "0.16.5"
rand = "0.7.3"
rand_distr = "0.2.2"
rayon = "1.3.1"